; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_get_rrset_ttl.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_get_rrset_ttl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ub_packed_rrset_key = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.packed_rrset_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ub_packed_rrset_key*)* @get_rrset_ttl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_rrset_ttl(%struct.ub_packed_rrset_key* %0) #0 {
  %2 = alloca %struct.ub_packed_rrset_key*, align 8
  %3 = alloca %struct.packed_rrset_data*, align 8
  store %struct.ub_packed_rrset_key* %0, %struct.ub_packed_rrset_key** %2, align 8
  %4 = load %struct.ub_packed_rrset_key*, %struct.ub_packed_rrset_key** %2, align 8
  %5 = getelementptr inbounds %struct.ub_packed_rrset_key, %struct.ub_packed_rrset_key* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.packed_rrset_data*
  store %struct.packed_rrset_data* %8, %struct.packed_rrset_data** %3, align 8
  %9 = load %struct.packed_rrset_data*, %struct.packed_rrset_data** %3, align 8
  %10 = getelementptr inbounds %struct.packed_rrset_data, %struct.packed_rrset_data* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
